<?xml version="1.0" encoding="utf-8"?><androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"    android:layout_width="match_parent"    android:layout_height="match_parent"    xmlns:app="http://schemas.android.com/apk/res-auto"    android:background="?backgroundLayout"    android:layoutDirection="ltr">    <com.google.android.material.appbar.AppBarLayout        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:background="?backgroundLayout"        app:liftOnScroll="true">        <androidx.constraintlayout.widget.ConstraintLayout            android:layout_width="match_parent"            android:layout_height="wrap_content">            <com.google.android.material.card.MaterialCardView                android:id="@+id/cv_chart_avatar"                android:layout_width="45dp"                android:layout_height="45dp"                android:layout_marginVertical="24dp"                android:layout_marginEnd="20dp"                app:cardCornerRadius="60dp"                app:cardElevation="10dp"                app:layout_constraintEnd_toEndOf="parent"                app:layout_constraintTop_toTopOf="parent">                <ImageView                    android:layout_width="match_parent"                    android:layout_height="match_parent"                    android:scaleType="fitXY"                    android:src="@drawable/avatar" />            </com.google.android.material.card.MaterialCardView>            <com.notion.presentation.cviews.TextViewBlack                android:id="@+id/tv_chart_name"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_marginEnd="10dp"                android:text="@string/name"                android:textSize="15sp"                app:layout_constraintBottom_toTopOf="@id/tv_chart_date"                app:layout_constraintEnd_toStartOf="@id/cv_chart_avatar"                app:layout_constraintTop_toTopOf="@id/cv_chart_avatar"                app:layout_constraintVertical_chainStyle="packed" />            <com.notion.presentation.cviews.TextViewRegular                android:id="@+id/tv_chart_date"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_marginEnd="10dp"                android:text="@string/date"                android:textColor="?android:textColorSecondary"                android:textSize="12sp"                app:layout_constraintBottom_toBottomOf="@id/cv_chart_avatar"                app:layout_constraintEnd_toStartOf="@id/cv_chart_avatar"                app:layout_constraintTop_toBottomOf="@id/tv_chart_name" />            <com.google.android.material.card.MaterialCardView                android:layout_width="wrap_content"                android:layout_height="wrap_content"                app:cardCornerRadius="70dp"                app:layout_constraintTop_toTopOf="parent"                app:layout_constraintStart_toStartOf="parent"                android:layout_marginStart="20dp"                app:cardElevation="0dp"                android:backgroundTint="?backgroundLayout"                app:strokeWidth="1dp"                app:strokeColor="?cardStrokColor"                android:layout_marginTop="20dp">                <LinearLayout                    android:layout_width="wrap_content"                    android:layout_height="wrap_content"                    android:orientation="horizontal">                    <ImageView                        android:layout_width="44dp"                        android:layout_height="44dp"                        android:src="@drawable/ic_notification"                        android:layout_margin="4dp"/>                    <ImageView                        android:layout_width="44dp"                        android:layout_height="44dp"                        android:src="@drawable/ic_gifts"                        android:layout_margin="4dp"/>                </LinearLayout>            </com.google.android.material.card.MaterialCardView>            <com.google.android.material.card.MaterialCardView                android:layout_width="match_parent"                android:layout_height="55dp"                android:backgroundTint="?backgroundCard"                app:layout_constraintTop_toBottomOf="@id/cv_chart_avatar"                app:layout_constraintEnd_toEndOf="parent"                android:layout_marginTop="20dp"                android:layout_marginHorizontal="20dp"                app:cardCornerRadius="70dp"                app:cardElevation="0dp"                >                <LinearLayout                    android:layout_width="match_parent"                    android:layout_height="match_parent"                    android:orientation="horizontal">                    <RelativeLayout                        android:layout_weight="1"                        android:layout_width="match_parent"                        android:layout_height="match_parent"                        android:layout_margin="6dp">                        <com.google.android.material.card.MaterialCardView                            android:id="@+id/cv_chart_group"                            android:layout_width="match_parent"                            android:layout_height="match_parent"                            app:cardCornerRadius="100dp"                            android:background="?selectableItemBackground"                            android:clickable="true"                            app:cardElevation="0dp">                            <ImageView                                android:id="@+id/iv_chart_group"                                android:layout_width="match_parent"                                android:layout_height="match_parent"                                android:src="@drawable/bg_color_primary"                                android:scaleType="fitXY"                                android:visibility="visible"/>                            <com.notion.presentation.cviews.TextViewRegular                                android:id="@+id/tv_chart_group"                                android:layout_width="wrap_content"                                android:layout_height="wrap_content"                                android:text="@string/group"                                android:layout_gravity="center"                                android:textSize="16sp"                                android:textColor="@color/white"/>                        </com.google.android.material.card.MaterialCardView>                    </RelativeLayout>                    <RelativeLayout                        android:layout_weight="1"                        android:layout_width="match_parent"                        android:layout_height="match_parent"                        android:layout_margin="6dp">                        <com.google.android.material.card.MaterialCardView                            android:id="@+id/cv_chart_investment"                            android:layout_width="match_parent"                            android:layout_height="match_parent"                            app:cardCornerRadius="100dp"                            android:background="?selectableItemBackground"                            android:clickable="true"                            app:cardElevation="0dp">                            <ImageView                                android:id="@+id/iv_chart_investment"                                android:layout_width="match_parent"                                android:layout_height="match_parent"                                android:src="@drawable/bg_color_primary"                                android:scaleType="fitXY"                                android:visibility="gone"/>                            <com.notion.presentation.cviews.TextViewRegular                                android:id="@+id/tv_chart_investment"                                android:layout_width="wrap_content"                                android:layout_height="wrap_content"                                android:text="@string/user_challenge"                                android:layout_gravity="center"                                android:textSize="16sp"/>                        </com.google.android.material.card.MaterialCardView>                    </RelativeLayout>                    <RelativeLayout                        android:layout_weight="1"                        android:layout_width="match_parent"                        android:layout_height="match_parent"                        android:layout_margin="6dp">                        <com.google.android.material.card.MaterialCardView                            android:id="@+id/cv_chart_saving"                            android:layout_width="match_parent"                            android:layout_height="match_parent"                            app:cardCornerRadius="100dp"                            android:background="?selectableItemBackground"                            android:clickable="true"                            app:cardElevation="0dp">                            <ImageView                                android:id="@+id/iv_chart_saving"                                android:layout_width="match_parent"                                android:layout_height="match_parent"                                android:src="@drawable/bg_color_primary"                                android:scaleType="fitXY"                                android:visibility="gone"/>                            <com.notion.presentation.cviews.TextViewRegular                                android:id="@+id/tv_chart_saving"                                android:layout_width="wrap_content"                                android:layout_height="wrap_content"                                android:text="@string/saving"                                android:layout_gravity="center"                                android:textSize="16sp"/>                        </com.google.android.material.card.MaterialCardView>                    </RelativeLayout>                </LinearLayout>            </com.google.android.material.card.MaterialCardView>        </androidx.constraintlayout.widget.ConstraintLayout>    </com.google.android.material.appbar.AppBarLayout>    <androidx.viewpager2.widget.ViewPager2        android:id="@+id/vp_chart"        android:layout_width="match_parent"        android:layout_height="match_parent"        android:layout_marginTop="16dp"        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"/></androidx.coordinatorlayout.widget.CoordinatorLayout>